@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0



class PlanController {
 +upsert(): ResponseEntity<PlanView>
}



class PlanService {
 +create(String planType,EditPlanRequest resource): Plan
}
class PlanServiceImpl{
 +create(String planType,EditPlanRequest resource): Plan
}

interface PlanRepository <<interface>> {
 +save(plan): Result
}


class Plan {
    -nMins
    -maxDevices
    -musicCollections
    -musicSuggestions
    -monthlyFee
    -annualFee
    -planState
    -planType
    -planPromote
    -HTMLdescription
    Plan(final String planType, final Integer numMinutes, final Integer maxDevices, final Integer musicCollections,
                        final String musicSuggestions, final Integer monthlyFee, final Integer annualFee,
                        final String htmlDescription)
}


PlanRepository "1" --> "0..*" Plan:  records
PlanController ..> PlanService
PlanServiceImpl ..> PlanRepository

PlanServiceImpl ..> Plan
PlanService ..> Plan
PlanServiceImpl .up.|> PlanService

@enduml